(Gen4) reading HGSS surfing encs, give proper enc types in more places